# C.R.A.P.

./: .gitignore  CMakeLists.txt  main.cpp
UI/: README_UI.md  mqtt_session_ui.py  requirements.txt
app/: bluetooth_connection_test.cpp  main.cpp  mqtt_connection_test.cpp
core/: CMakeLists.txt
core/include/: Bluetooth.h  Communication.h
core/include/Messaging/: Bluetooth.h  Communication.h  Endpoints.h  Logger.h  MQTTClient.h  PahoMQTTClient.h  SessionCommand.h
core/include/Processing/: AccelGravityMeasureModel.h  BloodOxygenProcessor.h  FingerAbductionProcessor.h  ForceProcessing.h  JointRomProcessor.h  ProcessorConfigs.h  QueueMessageTypes.h  WristOrientationProcessor.h
core/include/Workers/: ComWorker.h  MQTTWorker.h  MQTTWorkerOld.h  SensorProcessingLaneWorker.h  SensorProcessingWorker.h
core/src/: Bluetooth.cpp
core/src/Messaging/: Bluetooth.cpp  PahoMQTTClient.cpp
core/src/Processing/: AccelGravityMeasureModel.cpp  BloodOxygenProcessor.cpp  FingerAbductionProcessor.cpp  ForceProcessing.cpp  JointRomProcessor.cpp  WristOrientationProcessor.cpp
core/src/Workers/: ComWorker.cpp  MQTTWorker.cpp  MQTTWorkerOld.cpp  SensorProcessingLaneWorker.cpp  SensorProcessingWorker.cpp
scripts/: run_stack.sh
tests/: CMakeLists.txt  test_support.h  workers_threaded_tests.cpp  workers_unit_tests.cpp
